// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Albums 2 OnboardingBase should mount on desktop 1`] = `
<Dialog
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "onboarding-base",
      },
      "entityMixes": Array [
        "externalComponentClass",
      ],
      "entityMods": Object {
        "touch": false,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  hasAnimation={false}
  noCloseButton={true}
  onClose={[Function]}
  theme="normal"
  visible={true}
>
  <Logo360
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "logo",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isMonochrome={true}
    notClickable={true}
    theme="light"
  />
  <Button
    aria-label="Закрыть"
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "close",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    icon={[Function]}
    onClick={[Function]}
    size="l"
    view="clear-inverse"
  />
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "title",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    Бодрящий заголовок
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "text",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    Привлекательная надпись
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "button-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Button
      onClick={[Function]}
      size="ufo-xxl"
      view="action"
    >
      <span
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "onboarding-base",
              "elem": "button-text",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        Жми уже скорее
      </span>
    </Button>
  </div>
</Dialog>
`;

exports[`Albums 2 OnboardingBase should mount on smart phone 1`] = `
<Dialog
  cls={
    BemNamingEntity {
      "entity": Object {
        "block": "onboarding-base",
      },
      "entityMixes": Array [
        "externalComponentClass",
      ],
      "entityMods": Object {
        "touch": true,
      },
      "naming": Object {
        "stringify": [Function],
      },
    }
  }
  hasAnimation={false}
  noCloseButton={true}
  onClose={[Function]}
  theme="normal"
  visible={true}
>
  <Logo360
    cls={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "logo",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    isMonochrome={true}
    notClickable={true}
    theme="light"
  />
  <Button
    aria-label="Закрыть"
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "close",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
    icon={[Function]}
    onClick={[Function]}
    size="l"
    view="clear-inverse"
  />
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "title",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    Бодрящий заголовок
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "text",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    Привлекательная надпись
  </div>
  <div
    className={
      BemNamingEntity {
        "entity": Object {
          "block": "onboarding-base",
          "elem": "button-wrapper",
        },
        "entityMixes": Array [],
        "entityMods": Object {},
        "naming": Object {
          "stringify": [Function],
        },
      }
    }
  >
    <Button
      onClick={[Function]}
      size="ufo-xxl"
      view="action"
    >
      <span
        className={
          BemNamingEntity {
            "entity": Object {
              "block": "onboarding-base",
              "elem": "button-text",
            },
            "entityMixes": Array [],
            "entityMods": Object {},
            "naming": Object {
              "stringify": [Function],
            },
          }
        }
      >
        Жми уже скорее
      </span>
    </Button>
  </div>
</Dialog>
`;
